--- a/examples/eval/scripts/eval_tb_smoke.yaml
+++ b/examples/eval/scripts/eval_tb_smoke.yaml
@@ -12,7 +12,8 @@ eval:
   delegate:
     - name: terminal_bench
       type: examples.eval.terminal_bench.tb_config.build_terminal_bench_config
-      url: http://localhost:9051
+      # url: http://localhost:9051
+      url: http://172.17.0.1:9051
       timeout_secs: 14400
       max_retries: 1
       model_name: qwen3-8b
