--- a/examples/eval/scripts/eval_tb_smoke.yaml
+++ b/examples/eval/scripts/eval_tb_smoke.yaml
@@ -12,12 +12,11 @@ eval:
   delegate:
     - name: terminal_bench
       type: examples.eval.terminal_bench.tb_config.build_terminal_bench_config
-      # url: http://localhost:9051
-      url: http://172.17.0.1:9051
+      url: http://172.17.0.1:9052
       timeout_secs: 14400
       max_retries: 1
-      model_name: qwen3-8b
-      api_base: http://127.0.0.1:30001/v1
+      model_name: openai/qwen3-8b
+      api_base: http://127.0.1.1:30005/v1
       dataset_path: /mnt/data/xinyu/program/slime-tb/terminal-bench/tasks
       task_id: hello-world
-      n_concurrent: 1
+      n_concurrent: 8
