Split TB eval config/ports

--- a/examples/eval/scripts/eval_tb_smoke.yaml
+++ b/examples/eval/scripts/eval_tb_smoke.yaml
@@ -17,13 +17,13 @@ eval:
   delegate:
     - name: terminal_bench
       type: examples.eval.terminal_bench.tb_config.build_terminal_bench_config
-      url: http://172.17.0.1:9052
+      url: http://172.17.0.1:9051
       timeout_secs: 28800
       max_retries: 1
       model_name: qwen3-8b
-      api_base: http://127.0.1.1:30005/v1
+      api_base: http://127.0.1.1:30006/v1
       dataset_path: /mnt/data/xinyu/program/slime-tb/terminal-bench/tasks
-      # task_id: hello-world
+      task_id: hello-world
       # n_tasks: 10
       n_attempts: 3
-      n_concurrent: 8
+      n_concurrent: 1
