--- a/examples/eval/scripts/eval_tb_smoke.yaml
+++ b/examples/eval/scripts/eval_tb_smoke.yaml
@@ -10,24 +10,19 @@ eval:
     #   path: /root/gpqa/gpqa_eval.jsonl
     #   rm_type: gpqa
     #   n_samples_per_eval_prompt: 2
-    # - name: ifbench   # huggingface-cli download --repo-type dataset zyzshishui0627/IFBench --local-dir /root/ifbench
-    #   path: /root/ifbench/IFBench_eval.jsonl
-    #   rm_type: ifbench
-    #   n_samples_per_eval_prompt: 1
-    - name: smoke
-      path: /mnt/data/zhiyao/tb_evaluation/tb_eval_smoke/eval_smoke.jsonl
-      rm_type: deepscaler
+    - name: ifbench   # huggingface-cli download --repo-type dataset zyzshishui0627/IFBench --local-dir /root/ifbench
+      path: /root/ifbench/IFBench_eval.jsonl
+      rm_type: ifbench
       n_samples_per_eval_prompt: 1
-      max_response_len: 128
   delegate:
     - name: terminal_bench
-      # type: examples.eval.terminal_bench.tb_config.build_terminal_bench_config
-      url: http://172.17.0.1:9052
+      url: http://172.17.0.1:9051
       timeout_secs: 86400  # 24 hours
       max_retries: 1 # HTTP request retries from Slime to the TB server
       model_name: qwen3-8b
-      api_base: http://127.0.1.1:30005/v1
-      dataset_path: /mnt/data/xinyu/program/slime-tb/terminal-bench/tasks
+      # api_base: http://10.102.22.22:30006/v1
+      api_base: http://127.0.1.1:30006/v1
+      dataset_path: /mnt/data/xinyu/program/slime_eval_workspace/terminal-bench/tasks # host
       task_id: hello-world
       # n_tasks: 10
       n_attempts: 2 # TB task-level retries (per task within tb run)
