--- a/examples/eval/scripts/eval_tb_example.yaml
+++ b/examples/eval/scripts/eval_tb_example.yaml
@@ -1,7 +1,7 @@
 eval:
   defaults:
     n_samples_per_eval_prompt: 1
-    # temperature: 0.6
+    temperature: 0.6
     top_p: 0.95
     top_k: -1
     max_response_len: 24576
