--- a/examples/eval/scripts/eval_tb_example.yaml
+++ b/examples/eval/scripts/eval_tb_example.yaml
@@ -16,13 +16,13 @@ eval:
       n_samples_per_eval_prompt: 1
   delegate:
     - name: terminal_bench
-      url: http://172.17.0.1:9051
+      url: http://172.17.0.1:9051 # Port must match the TB server running on the host machine
       timeout_secs: 86400  # 24 hours
       max_retries: 1 # HTTP request retries from Slime to the TB server
       model_name: qwen3-8b
-      api_base: http://127.0.0.1:30005/v1
-      dataset_path: /mnt/data/xinyu/program/slime-tb/terminal-bench/tasks
+      api_base: http://127.0.0.1:30005/v1 # Port must match the sglang router port set in run-eval-tb-qwen.sh
+      dataset_path: /mnt/data/xinyu/program/slime-tb/terminal-bench/tasks # Dataset path on the host machine
       # task_id: hello-world
       # n_tasks: 10
-      n_attempts: 2 # TB task-level retries (per task within tb run)
+      n_attempts: 1 # TB task-level retries (per task within tb run)
       n_concurrent: 8
