change to another machine

--- a/examples/eval/scripts/eval_tb_example.yaml
+++ b/examples/eval/scripts/eval_tb_example.yaml
@@ -20,10 +20,10 @@ eval:
       timeout_secs: 86400  # 24 hours
       max_retries: 1 # HTTP request retries from Slime to the TB server
       model_name: qwen3-4b
-      api_base: http://127.0.0.1:30005/v1 # Port must match the sglang router port set in run-eval-tb-qwen.sh
-      dataset_path: /mnt/data/xinyu/program/slime-tb/terminal-bench/tasks # Dataset path on the host machine
+      api_base: http://10.102.22.22:30005/v1 # Port must match the sglang router port set in run-eval-tb-qwen.sh
+      # dataset_path: /mnt/data/xinyu/program/slime-tb/terminal-bench/tasks # Dataset path on the host machine
       # task_ids: 
       #   - hello-world
       # n_tasks: 10
       n_attempts: 1 # TB task-level retries (per task within tb run)
-      n_concurrent: 1
+      n_concurrent: 8
